--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -1,19 +1,23 @@
 //HEADER
 
 .container_header{
-    // background-color: #B4C7E0;
     background-color: rgb(0,190,142);
     justify-content: space-between;
 
     .header_container_login{
         width: 12rem;
-        // margin: 2rem;
         display: flex;
 
         .login, .signup{
             height: 100%;
-            // margin: 1rem;
             width: 5rem;
+
+            &:hover{
+                border-radius: 0px;
+                background: #00bf8f;
+                box-shadow: inset 32px 32px 45px #008060, 
+                            inset -32px -32px 45px #00febe;
+            }
 
             p{
                 text-align: center;
@@ -29,15 +33,18 @@
 //DEBUT FOOTER
 
 .container_footer {
-    // background-color: #947F59;
     background-color: rgb(0,48,36);
     display: flex;
     justify-content: space-around;
 
+    :nth-child(1), :nth-child(2){
+        margin-top: 2.5rem;
+    }
+
     p{
-        font-size: 2rem;
+        font-size: 1.5rem;
         color: white;
-        font-weight: 700;
+        font-family: 'Playfair Display SC', serif;
     }
 
 }
@@ -46,46 +53,28 @@
 
 //DEBUT PAGE ACCUEIL
 
-@keyframes bulle_texte_acceuil{
-    from{
-        border-radius: 50% 20% / 10% 40%;
-    }
-    to{
-        border-radius: 40% 10% / 20% 50%;
-
-    }
-}
-
 .container_accueil{
 
     .container_accueil_titre {
-        top: 30%;
+        top: 40%;
         left: 0;
         right: 0;
         margin: 0 auto;
         width: 40rem;
-        height: 20rem;
-        border-radius: 50% 20% / 10% 40%;
+        height: 11rem;
         position: absolute;
-        background: rgb(0,117,88);
         display: flex;
         justify-content: center;
         align-items: center;
-        // animation-name: bulle_texte_acceuil;
-        // animation-duration: 3s;
-        // animation-iteration-count: infinite;
-        
         p{
-            color: white;
+            color: rgb(0,84,63);
             font-weight: 700;
-            font-size: 3rem;
+            font-size: 4rem;
+            font-family: 'Playfair Display SC', serif;
+            text-shadow: white 5px 0 5px;
             
         }
     }
-    // :nth-child(2):before{
-    //     animation: 3s linear 1s infinite alternate slidein;
-    //     border-radius: 10% 60% / 50% 20%;
-    // }
 }
 
 //FIN PAGE ACCUEIL
