--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -78,3 +78,112 @@
 }
 
 //FIN PAGE ACCUEIL
+
+//DEBUT FORM LOGIN
+
+.form_login{
+    top: 30%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+
+    .container_form{
+        display: flex;
+        flex-direction: column;
+        border-radius: 5%;
+        width: 30%;
+        padding: 5rem;
+        height: 25rem;
+        align-items: center;
+        background-color: rgba(0,84,63, 0.7);
+        box-shadow: inset 1px 1px 20px 0px #00543f;
+        
+        label{
+            font-family: 'Playfair Display SC', serif;
+            font-size: 2rem;
+        }
+
+        input{
+            margin-top: 2rem;
+            width: 15rem;
+            height: 2rem;
+            font-family: 'Playfair Display SC', serif;
+            border: 2px black solid;
+        }
+
+        .email_input_form{
+            margin-bottom: 3rem;
+        }
+
+        .password_button_form{
+            margin-left: 1rem;
+            height: 2.4rem;
+            font-family: 'Playfair Display SC', serif;
+        }
+
+        .button_form_submit{
+            margin-top: 6rem;
+            height: 5rem;
+            width: 8rem;
+            font-family: 'Playfair Display SC', serif;
+
+        }
+    }
+}
+
+//FIN FORM LOGIN
+
+//DEBUT FORM SIGNUP
+
+.form_signup{
+    top: 15%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+
+    .container_form{
+        display: flex;
+        flex-direction: column;
+        border-radius: 5%;
+        width: 30%;
+        padding: 5rem;
+        align-items: center;
+        background-color: rgba(0,84,63, 0.7);
+        box-shadow: inset 1px 1px 20px 0px #00543f;
+        
+        label{
+            font-family: 'Playfair Display SC', serif;
+            font-size: 2rem;
+        }
+
+        input{
+            margin-bottom: 2rem;
+            margin-top: 1rem;
+            width: 15rem;
+            height: 2rem;
+            font-family: 'Playfair Display SC', serif;
+            border: 2px black solid;
+        }
+
+        .password_button_form{
+            margin-left: 1rem;
+            font-family: 'Playfair Display SC', serif;
+        }
+
+        .button_form_submit{
+            margin-top: 2rem;
+            height: 4rem;
+            width: 7rem;
+            font-family: 'Playfair Display SC', serif;
+
+        }
+    }
+}
+
+//FIN FORM SIGNUP
