--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -187,3 +187,22 @@
 }
 
 //FIN FORM SIGNUP
+
+//DEBUT CHAT
+
+.container_chat{
+    top: 30%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    .chat{
+        height: 40rem;
+        width: 60rem;
+        background-color: rgb(255, 255, 255);
+    }
+}
+
+//FIN CHAT
