--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -206,17 +206,77 @@
 //DEBUT CHAT
 
 .container_chat{
-    top: 30%;
+    top: 10%;
     left: 0;
     right: 0;
     margin: 0 auto;
     position: absolute;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     .chat{
-        height: 40rem;
-        width: 60rem;
-        background-color: rgb(255, 255, 255);
+        border-radius: 20px;
+        border: none;
+        background-color: rgba(0,84,63, 0.9);
+        box-shadow: inset 1px 1px 20px 0px #00543f;
+        font-size: 1.3rem;
+        font-weight: bold;
+        color: white;
+        text-shadow: #00543f 5px 0 5px;
+        margin-left: 30%;
+        margin-right: 30%;
+    }
+    .container_message{
+        margin-top: 10%;
+        
+        .container_form_chat {
+        background-color: rgba(0,84,63, 0.7);
+        box-shadow: inset 1px 1px 20px 0px #00543f;
+        margin-left: 20%;
+        margin-right: 20%;
+        height: 20rem;
+        border-radius: 30px;
+        
+            :nth-child(1){
+                font-size: 1.4rem;
+                
+            }
+
+            .title_message{
+                margin-bottom: 1rem;
+
+                label{
+                    margin-right: 1rem;
+                }
+            }
+
+            .message{
+                display: flex;
+                flex-direction: column;
+                
+                textarea{
+                    margin: 1rem;
+                    height: 13rem;
+                }
+            }
+
+            button{
+                margin-top: 3rem;
+                width: 10rem;
+                height: 4rem;
+                border-radius: 30px;
+                font-size: 1.5rem;
+                background-color: #00543f;
+                border: none;
+                color: white;
+                transition: all 200ms ease-in;
+            }
+    
+            button:hover{
+                background-color: #00febe;
+                color: black;
+            }
+        }
     }
 }
 
