optimisation du changement de profil en incluent la possibilitée de changer la photo de profil

--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -594,6 +594,10 @@
         width: 25rem;
         height: 30rem;
         background-color: rgb(255, 255, 255);
+
+        img{
+            width: 100%;
+        }
         
     }
 
