--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -495,6 +495,10 @@
                         margin: 1rem;
                         text-align: left;
                     }
+
+                    img{
+                        max-width: 13rem;
+                    }
                 }
             }
 
