Creation de l'admin, ajout des autorisations sur une partie des routes pour l'admin, mise en place du rafraichissement local sur toute les routes (fonction refresh du state image à faire selon l'id du msg)

--- a/frontend/groupomania/src/scss/style.scss
+++ b/frontend/groupomania/src/scss/style.scss
@@ -538,6 +538,11 @@
                             border-top-right-radius: 5px;
                         }
 
+                        img{
+                            max-width: 13rem;
+
+                        }
+
                         .comment{
                             padding: 0.5rem;
                         }
